--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^18.1.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
